compilador.output
Terminais sem uso na gramática

    LABEL
    TYPE
    ARRAY
    OF
    GOTO
    MOD
    LONGINT
    REAL
    CHAR


Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 $@3: ε

    5 $@4: ε

    6 bloco: $@2 parte_declara_vars $@3 parte_declara_subrotinas $@4 comando_composto

    7 parte_declara_vars: ε

    8 $@5: ε

    9 parte_declara_vars: $@5 VAR declara_vars

   10 declara_vars: declara_vars declara_var
   11             | declara_var

   12 $@6: ε

   13 $@7: ε

   14 declara_var: $@6 lista_id_var DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA

   15 tipo: INTEGER
   16     | BOOLEAN

   17 lista_id_var: lista_id_var VIRGULA IDENT
   18             | IDENT

   19 lista_idents: lista_idents VIRGULA lista_aux
   20             | lista_aux

   21 lista_aux: IDENT
   22          | NUMERO

   23 parte_declara_subrotinas: ε
   24                         | parte_declara_subrotinas declara_procedimento
   25                         | parte_declara_subrotinas declara_funcao

   26 $@8: ε

   27 declara_procedimento: PROCEDURE IDENT $@8 parametros_formais PONTO_E_VIRGULA finaliza_procedimento

   28 $@9: ε

   29 declara_funcao: FUNCTION IDENT $@9 parametros_formais DOIS_PONTOS tipo_func PONTO_E_VIRGULA finaliza_funcao

   30 tipo_func: INTEGER
   31          | BOOLEAN

   32 parametros_formais: ε

   33 $@10: ε

   34 parametros_formais: $@10 ABRE_PARENTESES secao_parametros_formais FECHA_PARENTESES

   35 secao_parametros_formais: ε
   36                         | PONTO_E_VIRGULA secao_parametros_formais

   37 $@11: ε

   38 $@12: ε

   39 secao_parametros_formais: $@11 VAR lista_id_param DOIS_PONTOS tipo_param $@12 secao_parametros_formais

   40 $@13: ε

   41 $@14: ε

   42 secao_parametros_formais: $@13 lista_id_param DOIS_PONTOS tipo_param $@14 secao_parametros_formais

   43 lista_id_param: lista_id_param VIRGULA IDENT
   44               | IDENT

   45 tipo_param: INTEGER
   46           | BOOLEAN

   47 $@15: ε

   48 finaliza_procedimento: $@15 bloco PONTO_E_VIRGULA

   49 $@16: ε

   50 finaliza_funcao: $@16 bloco PONTO_E_VIRGULA

   51 $@17: ε

   52 lista_expressoes: lista_expressoes VIRGULA $@17 expressao
   53                 | expressao
   54                 | ε

   55 expressao: expressao_simples

   56 $@18: ε

   57 expressao: expressao_simples relacao $@18 expressao_simples

   58 expressao_simples: expressao_simples sinal_ou_or termo

   59 $@19: ε

   60 expressao_simples: sinal $@19 termo
   61                  | termo

   62 sinal_ou_or: sinal
   63            | OR

   64 sinal: SOMA
   65      | SUBTRAI

   66 termo: fator
   67      | termo operacao_termo fator

   68 operacao_termo: MUL
   69               | DIV
   70               | AND

   71 $@20: ε

   72 fator: IDENT $@20 var_ou_func
   73      | NUMERO
   74      | ABRE_PARENTESES expressao FECHA_PARENTESES
   75      | NOT fator

   76 var_ou_func: variavel
   77            | chamada_de_funcao

   78 variavel: ε

   79 $@21: ε

   80 chamada_de_funcao: ABRE_PARENTESES $@21 lista_expressoes FECHA_PARENTESES

   81 relacao: IGUAL
   82        | DIFERENTE
   83        | MENOR
   84        | MENOR_OU_IGUAL
   85        | MAIOR
   86        | MAIOR_OU_IGUAL

   87 comando_composto: T_BEGIN comandos T_END

   88 comandos: ε
   89         | comando PONTO_E_VIRGULA comandos
   90         | comando

   91 comando: NUMERO DOIS_PONTOS comando_sem_rotulo
   92        | comando_sem_rotulo

   93 $@22: ε

   94 comando_sem_rotulo: IDENT $@22 trata_ident
   95                   | comando_repetitivo
   96                   | comando_condicional
   97                   | comando_composto
   98                   | comando_read
   99                   | comando_write

  100 trata_ident: atribuicao
  101            | chamada_de_procedimento

  102 $@23: ε

  103 atribuicao: ATRIBUICAO $@23 expressao

  104 chamada_de_procedimento: ε

  105 $@24: ε

  106 chamada_de_procedimento: ABRE_PARENTESES $@24 lista_expressoes FECHA_PARENTESES

  107 $@25: ε

  108 $@26: ε

  109 comando_repetitivo: WHILE $@25 expressao DO $@26 comando_composto

  110 $@27: ε

  111 comando_condicional: $@27 bloco_if bloco_else

  112 $@28: ε

  113 bloco_if: IF expressao $@28 THEN comando_sem_rotulo

  114 $@29: ε

  115 bloco_else: ELSE $@29 comando_sem_rotulo
  116           | ε

  117 comando_read: READ ABRE_PARENTESES read_params FECHA_PARENTESES

  118 read_params: read_params VIRGULA IDENT
  119            | IDENT

  120 comando_write: WRITE ABRE_PARENTESES write_params FECHA_PARENTESES

  121 write_params: write_params VIRGULA expressao
  122             | expressao


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 34 74 80 106 117 120
    FECHA_PARENTESES (260) 2 34 74 80 106 117 120
    VIRGULA (261) 17 19 43 52 118 121
    PONTO_E_VIRGULA (262) 2 14 27 29 36 48 50 89
    DOIS_PONTOS (263) 14 29 39 42 91
    PONTO (264) 2
    T_BEGIN (265) 87
    T_END (266) 87
    VAR (267) 9 39
    IDENT (268) 2 17 18 21 27 29 43 44 72 94 118 119
    ATRIBUICAO (269) 103
    LABEL (270)
    TYPE (271)
    ARRAY (272)
    OF (273)
    PROCEDURE (274) 27
    FUNCTION (275) 29
    GOTO (276)
    IF (277) 113
    ELSE (278) 115
    WHILE (279) 109
    DO (280) 109
    IGUAL (281) 81
    DIFERENTE (282) 82
    MENOR (283) 83
    MENOR_OU_IGUAL (284) 84
    MAIOR (285) 85
    MAIOR_OU_IGUAL (286) 86
    OR (287) 63
    AND (288) 70
    THEN (289) 113
    NOT (290) 75
    SOMA (291) 64
    SUBTRAI (292) 65
    DIV (293) 69
    MUL (294) 68
    MOD (295)
    INTEGER (296) 15 30 45
    LONGINT (297)
    REAL (298)
    CHAR (299)
    BOOLEAN (300) 16 31 46
    NUMERO (301) 22 73 91
    READ (302) 117
    WRITE (303) 120
    LOWER_THAN_ELSE (304)


Não terminais com as regras onde eles aparecem

    $accept (50)
        à esquerda: 0
    programa (51)
        à esquerda: 2
        à direita: 0
    $@1 (52)
        à esquerda: 1
        à direita: 2
    bloco (53)
        à esquerda: 6
        à direita: 2 48 50
    $@2 (54)
        à esquerda: 3
        à direita: 6
    $@3 (55)
        à esquerda: 4
        à direita: 6
    $@4 (56)
        à esquerda: 5
        à direita: 6
    parte_declara_vars (57)
        à esquerda: 7 9
        à direita: 6
    $@5 (58)
        à esquerda: 8
        à direita: 9
    declara_vars (59)
        à esquerda: 10 11
        à direita: 9 10
    declara_var (60)
        à esquerda: 14
        à direita: 10 11
    $@6 (61)
        à esquerda: 12
        à direita: 14
    $@7 (62)
        à esquerda: 13
        à direita: 14
    tipo (63)
        à esquerda: 15 16
        à direita: 14
    lista_id_var (64)
        à esquerda: 17 18
        à direita: 14 17
    lista_idents (65)
        à esquerda: 19 20
        à direita: 2 19
    lista_aux (66)
        à esquerda: 21 22
        à direita: 19 20
    parte_declara_subrotinas (67)
        à esquerda: 23 24 25
        à direita: 6 24 25
    declara_procedimento (68)
        à esquerda: 27
        à direita: 24
    $@8 (69)
        à esquerda: 26
        à direita: 27
    declara_funcao (70)
        à esquerda: 29
        à direita: 25
    $@9 (71)
        à esquerda: 28
        à direita: 29
    tipo_func (72)
        à esquerda: 30 31
        à direita: 29
    parametros_formais (73)
        à esquerda: 32 34
        à direita: 27 29
    $@10 (74)
        à esquerda: 33
        à direita: 34
    secao_parametros_formais (75)
        à esquerda: 35 36 39 42
        à direita: 34 36 39 42
    $@11 (76)
        à esquerda: 37
        à direita: 39
    $@12 (77)
        à esquerda: 38
        à direita: 39
    $@13 (78)
        à esquerda: 40
        à direita: 42
    $@14 (79)
        à esquerda: 41
        à direita: 42
    lista_id_param (80)
        à esquerda: 43 44
        à direita: 39 42 43
    tipo_param (81)
        à esquerda: 45 46
        à direita: 39 42
    finaliza_procedimento (82)
        à esquerda: 48
        à direita: 27
    $@15 (83)
        à esquerda: 47
        à direita: 48
    finaliza_funcao (84)
        à esquerda: 50
        à direita: 29
    $@16 (85)
        à esquerda: 49
        à direita: 50
    lista_expressoes (86)
        à esquerda: 52 53 54
        à direita: 52 80 106
    $@17 (87)
        à esquerda: 51
        à direita: 52
    expressao (88)
        à esquerda: 55 57
        à direita: 52 53 74 103 109 113 121 122
    $@18 (89)
        à esquerda: 56
        à direita: 57
    expressao_simples (90)
        à esquerda: 58 60 61
        à direita: 55 57 58
    $@19 (91)
        à esquerda: 59
        à direita: 60
    sinal_ou_or (92)
        à esquerda: 62 63
        à direita: 58
    sinal (93)
        à esquerda: 64 65
        à direita: 60 62
    termo (94)
        à esquerda: 66 67
        à direita: 58 60 61 67
    operacao_termo (95)
        à esquerda: 68 69 70
        à direita: 67
    fator (96)
        à esquerda: 72 73 74 75
        à direita: 66 67 75
    $@20 (97)
        à esquerda: 71
        à direita: 72
    var_ou_func (98)
        à esquerda: 76 77
        à direita: 72
    variavel (99)
        à esquerda: 78
        à direita: 76
    chamada_de_funcao (100)
        à esquerda: 80
        à direita: 77
    $@21 (101)
        à esquerda: 79
        à direita: 80
    relacao (102)
        à esquerda: 81 82 83 84 85 86
        à direita: 57
    comando_composto (103)
        à esquerda: 87
        à direita: 6 97 109
    comandos (104)
        à esquerda: 88 89 90
        à direita: 87 89
    comando (105)
        à esquerda: 91 92
        à direita: 89 90
    comando_sem_rotulo (106)
        à esquerda: 94 95 96 97 98 99
        à direita: 91 92 113 115
    $@22 (107)
        à esquerda: 93
        à direita: 94
    trata_ident (108)
        à esquerda: 100 101
        à direita: 94
    atribuicao (109)
        à esquerda: 103
        à direita: 100
    $@23 (110)
        à esquerda: 102
        à direita: 103
    chamada_de_procedimento (111)
        à esquerda: 104 106
        à direita: 101
    $@24 (112)
        à esquerda: 105
        à direita: 106
    comando_repetitivo (113)
        à esquerda: 109
        à direita: 95
    $@25 (114)
        à esquerda: 107
        à direita: 109
    $@26 (115)
        à esquerda: 108
        à direita: 109
    comando_condicional (116)
        à esquerda: 111
        à direita: 96
    $@27 (117)
        à esquerda: 110
        à direita: 111
    bloco_if (118)
        à esquerda: 113
        à direita: 111
    $@28 (119)
        à esquerda: 112
        à direita: 113
    bloco_else (120)
        à esquerda: 115 116
        à direita: 111
    $@29 (121)
        à esquerda: 114
        à direita: 115
    comando_read (122)
        à esquerda: 117
        à direita: 98
    read_params (123)
        à esquerda: 118 119
        à direita: 117 118
    comando_write (124)
        à esquerda: 120
        à direita: 99
    write_params (125)
        à esquerda: 121 122
        à direita: 120 121


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT   deslocar, e ir ao estado 7
    NUMERO  deslocar, e ir ao estado 8

    lista_idents  ir ao estado 9
    lista_aux     ir ao estado 10


Estado 7

   21 lista_aux: IDENT •

    $padrão  reduzir usando a regra 21 (lista_aux)


Estado 8

   22 lista_aux: NUMERO •

    $padrão  reduzir usando a regra 22 (lista_aux)


Estado 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   19 lista_idents: lista_idents • VIRGULA lista_aux

    FECHA_PARENTESES  deslocar, e ir ao estado 11
    VIRGULA           deslocar, e ir ao estado 12


Estado 10

   20 lista_idents: lista_aux •

    $padrão  reduzir usando a regra 20 (lista_idents)


Estado 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 13


Estado 12

   19 lista_idents: lista_idents VIRGULA • lista_aux

    IDENT   deslocar, e ir ao estado 7
    NUMERO  deslocar, e ir ao estado 8

    lista_aux  ir ao estado 14


Estado 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    $padrão  reduzir usando a regra 3 ($@2)

    bloco  ir ao estado 15
    $@2    ir ao estado 16


Estado 14

   19 lista_idents: lista_idents VIRGULA lista_aux •

    $padrão  reduzir usando a regra 19 (lista_idents)


Estado 15

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 17


Estado 16

    6 bloco: $@2 • parte_declara_vars $@3 parte_declara_subrotinas $@4 comando_composto

    VAR      reduzir usando a regra 8 ($@5)
    $padrão  reduzir usando a regra 7 (parte_declara_vars)

    parte_declara_vars  ir ao estado 18
    $@5                 ir ao estado 19


Estado 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 18

    6 bloco: $@2 parte_declara_vars • $@3 parte_declara_subrotinas $@4 comando_composto

    $padrão  reduzir usando a regra 4 ($@3)

    $@3  ir ao estado 20


Estado 19

    9 parte_declara_vars: $@5 • VAR declara_vars

    VAR  deslocar, e ir ao estado 21


Estado 20

    6 bloco: $@2 parte_declara_vars $@3 • parte_declara_subrotinas $@4 comando_composto

    $padrão  reduzir usando a regra 23 (parte_declara_subrotinas)

    parte_declara_subrotinas  ir ao estado 22


Estado 21

    9 parte_declara_vars: $@5 VAR • declara_vars

    $padrão  reduzir usando a regra 12 ($@6)

    declara_vars  ir ao estado 23
    declara_var   ir ao estado 24
    $@6           ir ao estado 25


Estado 22

    6 bloco: $@2 parte_declara_vars $@3 parte_declara_subrotinas • $@4 comando_composto
   24 parte_declara_subrotinas: parte_declara_subrotinas • declara_procedimento
   25                         | parte_declara_subrotinas • declara_funcao

    PROCEDURE  deslocar, e ir ao estado 26
    FUNCTION   deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 5 ($@4)

    $@4                   ir ao estado 28
    declara_procedimento  ir ao estado 29
    declara_funcao        ir ao estado 30


Estado 23

    9 parte_declara_vars: $@5 VAR declara_vars •
   10 declara_vars: declara_vars • declara_var

    IDENT    reduzir usando a regra 12 ($@6)
    $padrão  reduzir usando a regra 9 (parte_declara_vars)

    declara_var  ir ao estado 31
    $@6          ir ao estado 25


Estado 24

   11 declara_vars: declara_var •

    $padrão  reduzir usando a regra 11 (declara_vars)


Estado 25

   14 declara_var: $@6 • lista_id_var DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 32

    lista_id_var  ir ao estado 33


Estado 26

   27 declara_procedimento: PROCEDURE • IDENT $@8 parametros_formais PONTO_E_VIRGULA finaliza_procedimento

    IDENT  deslocar, e ir ao estado 34


Estado 27

   29 declara_funcao: FUNCTION • IDENT $@9 parametros_formais DOIS_PONTOS tipo_func PONTO_E_VIRGULA finaliza_funcao

    IDENT  deslocar, e ir ao estado 35


Estado 28

    6 bloco: $@2 parte_declara_vars $@3 parte_declara_subrotinas $@4 • comando_composto

    T_BEGIN  deslocar, e ir ao estado 36

    comando_composto  ir ao estado 37


Estado 29

   24 parte_declara_subrotinas: parte_declara_subrotinas declara_procedimento •

    $padrão  reduzir usando a regra 24 (parte_declara_subrotinas)


Estado 30

   25 parte_declara_subrotinas: parte_declara_subrotinas declara_funcao •

    $padrão  reduzir usando a regra 25 (parte_declara_subrotinas)


Estado 31

   10 declara_vars: declara_vars declara_var •

    $padrão  reduzir usando a regra 10 (declara_vars)


Estado 32

   18 lista_id_var: IDENT •

    $padrão  reduzir usando a regra 18 (lista_id_var)


Estado 33

   14 declara_var: $@6 lista_id_var • DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA
   17 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 38
    DOIS_PONTOS  deslocar, e ir ao estado 39


Estado 34

   27 declara_procedimento: PROCEDURE IDENT • $@8 parametros_formais PONTO_E_VIRGULA finaliza_procedimento

    $padrão  reduzir usando a regra 26 ($@8)

    $@8  ir ao estado 40


Estado 35

   29 declara_funcao: FUNCTION IDENT • $@9 parametros_formais DOIS_PONTOS tipo_func PONTO_E_VIRGULA finaliza_funcao

    $padrão  reduzir usando a regra 28 ($@9)

    $@9  ir ao estado 41


Estado 36

   87 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  deslocar, e ir ao estado 36
    IDENT    deslocar, e ir ao estado 42
    WHILE    deslocar, e ir ao estado 43
    NUMERO   deslocar, e ir ao estado 44
    READ     deslocar, e ir ao estado 45
    WRITE    deslocar, e ir ao estado 46

    IF       reduzir usando a regra 110 ($@27)
    $padrão  reduzir usando a regra 88 (comandos)

    comando_composto     ir ao estado 47
    comandos             ir ao estado 48
    comando              ir ao estado 49
    comando_sem_rotulo   ir ao estado 50
    comando_repetitivo   ir ao estado 51
    comando_condicional  ir ao estado 52
    $@27                 ir ao estado 53
    comando_read         ir ao estado 54
    comando_write        ir ao estado 55


Estado 37

    6 bloco: $@2 parte_declara_vars $@3 parte_declara_subrotinas $@4 comando_composto •

    $padrão  reduzir usando a regra 6 (bloco)


Estado 38

   17 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 56


Estado 39

   14 declara_var: $@6 lista_id_var DOIS_PONTOS • tipo $@7 PONTO_E_VIRGULA

    INTEGER  deslocar, e ir ao estado 57
    BOOLEAN  deslocar, e ir ao estado 58

    tipo  ir ao estado 59


Estado 40

   27 declara_procedimento: PROCEDURE IDENT $@8 • parametros_formais PONTO_E_VIRGULA finaliza_procedimento

    ABRE_PARENTESES  reduzir usando a regra 33 ($@10)
    $padrão          reduzir usando a regra 32 (parametros_formais)

    parametros_formais  ir ao estado 60
    $@10                ir ao estado 61


Estado 41

   29 declara_funcao: FUNCTION IDENT $@9 • parametros_formais DOIS_PONTOS tipo_func PONTO_E_VIRGULA finaliza_funcao

    ABRE_PARENTESES  reduzir usando a regra 33 ($@10)
    $padrão          reduzir usando a regra 32 (parametros_formais)

    parametros_formais  ir ao estado 62
    $@10                ir ao estado 61


Estado 42

   94 comando_sem_rotulo: IDENT • $@22 trata_ident

    $padrão  reduzir usando a regra 93 ($@22)

    $@22  ir ao estado 63


Estado 43

  109 comando_repetitivo: WHILE • $@25 expressao DO $@26 comando_composto

    $padrão  reduzir usando a regra 107 ($@25)

    $@25  ir ao estado 64


Estado 44

   91 comando: NUMERO • DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  deslocar, e ir ao estado 65


Estado 45

  117 comando_read: READ • ABRE_PARENTESES read_params FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 66


Estado 46

  120 comando_write: WRITE • ABRE_PARENTESES write_params FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 67


Estado 47

   97 comando_sem_rotulo: comando_composto •

    $padrão  reduzir usando a regra 97 (comando_sem_rotulo)


Estado 48

   87 comando_composto: T_BEGIN comandos • T_END

    T_END  deslocar, e ir ao estado 68


Estado 49

   89 comandos: comando • PONTO_E_VIRGULA comandos
   90         | comando •

    PONTO_E_VIRGULA  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 90 (comandos)


Estado 50

   92 comando: comando_sem_rotulo •

    $padrão  reduzir usando a regra 92 (comando)


Estado 51

   95 comando_sem_rotulo: comando_repetitivo •

    $padrão  reduzir usando a regra 95 (comando_sem_rotulo)


Estado 52

   96 comando_sem_rotulo: comando_condicional •

    $padrão  reduzir usando a regra 96 (comando_sem_rotulo)


Estado 53

  111 comando_condicional: $@27 • bloco_if bloco_else

    IF  deslocar, e ir ao estado 70

    bloco_if  ir ao estado 71


Estado 54

   98 comando_sem_rotulo: comando_read •

    $padrão  reduzir usando a regra 98 (comando_sem_rotulo)


Estado 55

   99 comando_sem_rotulo: comando_write •

    $padrão  reduzir usando a regra 99 (comando_sem_rotulo)


Estado 56

   17 lista_id_var: lista_id_var VIRGULA IDENT •

    $padrão  reduzir usando a regra 17 (lista_id_var)


Estado 57

   15 tipo: INTEGER •

    $padrão  reduzir usando a regra 15 (tipo)


Estado 58

   16 tipo: BOOLEAN •

    $padrão  reduzir usando a regra 16 (tipo)


Estado 59

   14 declara_var: $@6 lista_id_var DOIS_PONTOS tipo • $@7 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 13 ($@7)

    $@7  ir ao estado 72


Estado 60

   27 declara_procedimento: PROCEDURE IDENT $@8 parametros_formais • PONTO_E_VIRGULA finaliza_procedimento

    PONTO_E_VIRGULA  deslocar, e ir ao estado 73


Estado 61

   34 parametros_formais: $@10 • ABRE_PARENTESES secao_parametros_formais FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 74


Estado 62

   29 declara_funcao: FUNCTION IDENT $@9 parametros_formais • DOIS_PONTOS tipo_func PONTO_E_VIRGULA finaliza_funcao

    DOIS_PONTOS  deslocar, e ir ao estado 75


Estado 63

   94 comando_sem_rotulo: IDENT $@22 • trata_ident

    ABRE_PARENTESES  deslocar, e ir ao estado 76
    ATRIBUICAO       deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 104 (chamada_de_procedimento)

    trata_ident              ir ao estado 78
    atribuicao               ir ao estado 79
    chamada_de_procedimento  ir ao estado 80


Estado 64

  109 comando_repetitivo: WHILE $@25 • expressao DO $@26 comando_composto

    ABRE_PARENTESES  deslocar, e ir ao estado 81
    IDENT            deslocar, e ir ao estado 82
    NOT              deslocar, e ir ao estado 83
    SOMA             deslocar, e ir ao estado 84
    SUBTRAI          deslocar, e ir ao estado 85
    NUMERO           deslocar, e ir ao estado 86

    expressao          ir ao estado 87
    expressao_simples  ir ao estado 88
    sinal              ir ao estado 89
    termo              ir ao estado 90
    fator              ir ao estado 91


Estado 65

   91 comando: NUMERO DOIS_PONTOS • comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 36
    IDENT    deslocar, e ir ao estado 42
    WHILE    deslocar, e ir ao estado 43
    READ     deslocar, e ir ao estado 45
    WRITE    deslocar, e ir ao estado 46

    $padrão  reduzir usando a regra 110 ($@27)

    comando_composto     ir ao estado 47
    comando_sem_rotulo   ir ao estado 92
    comando_repetitivo   ir ao estado 51
    comando_condicional  ir ao estado 52
    $@27                 ir ao estado 53
    comando_read         ir ao estado 54
    comando_write        ir ao estado 55


Estado 66

  117 comando_read: READ ABRE_PARENTESES • read_params FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 93

    read_params  ir ao estado 94


Estado 67

  120 comando_write: WRITE ABRE_PARENTESES • write_params FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 81
    IDENT            deslocar, e ir ao estado 82
    NOT              deslocar, e ir ao estado 83
    SOMA             deslocar, e ir ao estado 84
    SUBTRAI          deslocar, e ir ao estado 85
    NUMERO           deslocar, e ir ao estado 86

    expressao          ir ao estado 95
    expressao_simples  ir ao estado 88
    sinal              ir ao estado 89
    termo              ir ao estado 90
    fator              ir ao estado 91
    write_params       ir ao estado 96


Estado 68

   87 comando_composto: T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 87 (comando_composto)


Estado 69

   89 comandos: comando PONTO_E_VIRGULA • comandos

    T_BEGIN  deslocar, e ir ao estado 36
    IDENT    deslocar, e ir ao estado 42
    WHILE    deslocar, e ir ao estado 43
    NUMERO   deslocar, e ir ao estado 44
    READ     deslocar, e ir ao estado 45
    WRITE    deslocar, e ir ao estado 46

    IF       reduzir usando a regra 110 ($@27)
    $padrão  reduzir usando a regra 88 (comandos)

    comando_composto     ir ao estado 47
    comandos             ir ao estado 97
    comando              ir ao estado 49
    comando_sem_rotulo   ir ao estado 50
    comando_repetitivo   ir ao estado 51
    comando_condicional  ir ao estado 52
    $@27                 ir ao estado 53
    comando_read         ir ao estado 54
    comando_write        ir ao estado 55


Estado 70

  113 bloco_if: IF • expressao $@28 THEN comando_sem_rotulo

    ABRE_PARENTESES  deslocar, e ir ao estado 81
    IDENT            deslocar, e ir ao estado 82
    NOT              deslocar, e ir ao estado 83
    SOMA             deslocar, e ir ao estado 84
    SUBTRAI          deslocar, e ir ao estado 85
    NUMERO           deslocar, e ir ao estado 86

    expressao          ir ao estado 98
    expressao_simples  ir ao estado 88
    sinal              ir ao estado 89
    termo              ir ao estado 90
    fator              ir ao estado 91


Estado 71

  111 comando_condicional: $@27 bloco_if • bloco_else

    ELSE  deslocar, e ir ao estado 99

    $padrão  reduzir usando a regra 116 (bloco_else)

    bloco_else  ir ao estado 100


Estado 72

   14 declara_var: $@6 lista_id_var DOIS_PONTOS tipo $@7 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 101


Estado 73

   27 declara_procedimento: PROCEDURE IDENT $@8 parametros_formais PONTO_E_VIRGULA • finaliza_procedimento

    $padrão  reduzir usando a regra 47 ($@15)

    finaliza_procedimento  ir ao estado 102
    $@15                   ir ao estado 103


Estado 74

   34 parametros_formais: $@10 ABRE_PARENTESES • secao_parametros_formais FECHA_PARENTESES

    PONTO_E_VIRGULA  deslocar, e ir ao estado 104

    VAR      reduzir usando a regra 37 ($@11)
    IDENT    reduzir usando a regra 40 ($@13)
    $padrão  reduzir usando a regra 35 (secao_parametros_formais)

    secao_parametros_formais  ir ao estado 105
    $@11                      ir ao estado 106
    $@13                      ir ao estado 107


Estado 75

   29 declara_funcao: FUNCTION IDENT $@9 parametros_formais DOIS_PONTOS • tipo_func PONTO_E_VIRGULA finaliza_funcao

    INTEGER  deslocar, e ir ao estado 108
    BOOLEAN  deslocar, e ir ao estado 109

    tipo_func  ir ao estado 110


Estado 76

  106 chamada_de_procedimento: ABRE_PARENTESES • $@24 lista_expressoes FECHA_PARENTESES

    $padrão  reduzir usando a regra 105 ($@24)

    $@24  ir ao estado 111


Estado 77

  103 atribuicao: ATRIBUICAO • $@23 expressao

    $padrão  reduzir usando a regra 102 ($@23)

    $@23  ir ao estado 112


Estado 78

   94 comando_sem_rotulo: IDENT $@22 trata_ident •

    $padrão  reduzir usando a regra 94 (comando_sem_rotulo)


Estado 79

  100 trata_ident: atribuicao •

    $padrão  reduzir usando a regra 100 (trata_ident)


Estado 80

  101 trata_ident: chamada_de_procedimento •

    $padrão  reduzir usando a regra 101 (trata_ident)


Estado 81

   74 fator: ABRE_PARENTESES • expressao FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 81
    IDENT            deslocar, e ir ao estado 82
    NOT              deslocar, e ir ao estado 83
    SOMA             deslocar, e ir ao estado 84
    SUBTRAI          deslocar, e ir ao estado 85
    NUMERO           deslocar, e ir ao estado 86

    expressao          ir ao estado 113
    expressao_simples  ir ao estado 88
    sinal              ir ao estado 89
    termo              ir ao estado 90
    fator              ir ao estado 91


Estado 82

   72 fator: IDENT • $@20 var_ou_func

    $padrão  reduzir usando a regra 71 ($@20)

    $@20  ir ao estado 114


Estado 83

   75 fator: NOT • fator

    ABRE_PARENTESES  deslocar, e ir ao estado 81
    IDENT            deslocar, e ir ao estado 82
    NOT              deslocar, e ir ao estado 83
    NUMERO           deslocar, e ir ao estado 86

    fator  ir ao estado 115


Estado 84

   64 sinal: SOMA •

    $padrão  reduzir usando a regra 64 (sinal)


Estado 85

   65 sinal: SUBTRAI •

    $padrão  reduzir usando a regra 65 (sinal)


Estado 86

   73 fator: NUMERO •

    $padrão  reduzir usando a regra 73 (fator)


Estado 87

  109 comando_repetitivo: WHILE $@25 expressao • DO $@26 comando_composto

    DO  deslocar, e ir ao estado 116


Estado 88

   55 expressao: expressao_simples •
   57          | expressao_simples • relacao $@18 expressao_simples
   58 expressao_simples: expressao_simples • sinal_ou_or termo

    IGUAL           deslocar, e ir ao estado 117
    DIFERENTE       deslocar, e ir ao estado 118
    MENOR           deslocar, e ir ao estado 119
    MENOR_OU_IGUAL  deslocar, e ir ao estado 120
    MAIOR           deslocar, e ir ao estado 121
    MAIOR_OU_IGUAL  deslocar, e ir ao estado 122
    OR              deslocar, e ir ao estado 123
    SOMA            deslocar, e ir ao estado 84
    SUBTRAI         deslocar, e ir ao estado 85

    $padrão  reduzir usando a regra 55 (expressao)

    sinal_ou_or  ir ao estado 124
    sinal        ir ao estado 125
    relacao      ir ao estado 126


Estado 89

   60 expressao_simples: sinal • $@19 termo

    $padrão  reduzir usando a regra 59 ($@19)

    $@19  ir ao estado 127


Estado 90

   61 expressao_simples: termo •
   67 termo: termo • operacao_termo fator
